# yolo-toys

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  VERIFICATION_REPORT.md  _config.yml  docker-compose.yml  index.md  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  search.md  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
_data/: navigation.yml  versions.yml
_includes/: footer_custom.html  head_custom.html  header_custom.html  nav.html  toc.md
_layouts/: default.html
app/: __init__.py  config.py  main.py  metrics.py  middleware.py  model_manager.py  routes.py  schemas.py
app/api/: __init__.py  inference.py  models.py  system.py  utils.py  websocket.py
app/handlers/: __init__.py  base.py  blip_handler.py  hf_handler.py  registry.py  yolo_handler.py
assets/css/: custom.scss
changelog/: 2025-02-13-project-infrastructure.md  2025-02-13_project-infrastructure.md  2025-11-23-gpu-and-accuracy.md  2025-11-25-multi-model-system.md  2025-12-14-upgrade-and-optimizations.md  2025-12-18-unify-and-cleanup.md  2025-12-19-docs-and-ux-alignment.md  2026-02-13-v3-architecture-refactor.md  2026-02-25-frontend-ui-beautification.md  2026-03-09-pages-and-docs-optimization.md  2026-03-10-pages-round2.md  2026-03-10-pages-round3.md  2026-03-10-workflow-deep-standardization.md  2026-03-10_workflow-deep-standardization.md  CHANGELOG.md  CHANGELOG.zh-CN.md  README.md  README.zh-CN.md  index.md  release-notes.md  v2.0.0.md  v3.0.0.md  v3.1.0.md  v3.1.0.zh-CN.md
changelog/archive/: 2025-02-13-project-infrastructure.md  2025-11-23-gpu-and-accuracy.md  2025-11-25-multi-model-system.md  2025-12-14-upgrade-and-optimizations.md  2025-annual-summary.md  2026-02-25-frontend-ui-beautification.md  2026-03-09-pages-and-docs-optimization.md  2026-03-10-workflow-deep-standardization.md  2026-q1-summary.md
config/: .env.development  .env.example  .env.production
deployments/: README.md
deployments/docker/: .dockerignore  Dockerfile  Dockerfile.cuda  docker-compose.yml
deployments/monitoring/: README.md
docs/: README.md  README.zh-CN.md
docs/_includes/: feedback.html
docs/api/: index.md  rest-api.md  rest-api.zh-CN.md  websocket.md  websocket.zh-CN.md
docs/architecture/: handlers.md  handlers.zh-CN.md  index.md  overview.md  overview.zh-CN.md
docs/deployment/: docker.md  docker.zh-CN.md  environments.md  environments.zh-CN.md  index.md
docs/getting-started/: index.md  installation.md  installation.zh-CN.md  quickstart.md  quickstart.zh-CN.md
docs/guides/: adding-models.md  adding-models.zh-CN.md  index.md
docs/reference/: faq.md  faq.zh-CN.md  index.md  models.md  models.zh-CN.md
frontend/: app.js  index.html  style.css
frontend/js/: api.js  camera.js  draw.js
openspec/: config.yaml
openspec/changes/archive/2026-04-23-improve-test-coverage/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-24-normalize-project-for-archive/: proposal.md  tasks.md
openspec/changes/archive/2026-04-24-normalize-project-for-archive/specs/developer-workflow/: spec.md
openspec/changes/archive/2026-04-24-normalize-project-for-archive/specs/project-packaging/: spec.md
openspec/changes/archive/2026-04-24-normalize-project-for-archive/specs/testing/: spec.md
openspec/changes/archive/2026-04-24-normalize-project-for-archive/specs/tooling-standardization/: spec.md
openspec/changes/normalize-project-for-archive/: design.md
openspec/changes/normalize-project-for-archive/specs/product/: spec.md
openspec/specs/api/: openapi.yaml  spec.md  websocket.md
openspec/specs/domain/: spec.md
openspec/specs/domain/data-models/: spec.md
openspec/specs/domain/handlers/: spec.md
openspec/specs/product/: spec.md
openspec/specs/repository-governance/: archive-checklist.md  spec.md
openspec/specs/testing/: spec.md
scripts/: dev.sh
specs/api/: openapi.yaml  websocket-protocol.md
specs/db/: schema-v1.md
specs/rfc/: 0001-core-architecture.md  0002-handler-pattern.md
specs/testing/: rest-api.feature
tests/: conftest.py  test_api.py  test_coverage.py  test_model_manager.py
tests/test_handlers/: __init__.py  test_blip_handler.py  test_hf_handler.py  test_yolo_handler.py
